# AeroAPK

./: .gitignore  README.md  go.mod  main.go  main.py  pyproject.toml
aerodroid/: __init__.py  __main__.py  apk_doctor.py  config.py  run_apk.py  run_app.py
aerodroid/backend/: apk.py  container.py
aerodroid/tuning/: performance.py
aerodroid/ui/: main_window.py
container/: runner.go
data/: aerodroid-mime.xml  aerodroid.desktop
display/: display_manager.go
rootfs-builder/: ext4_extract.py  extract_system.py  fetch_api34_gsi.sh  fetch_google_sdk.sh
scripts/: build-deb.sh  debloat_aosp.sh  install-native-bridge.sh  quick-test.sh  run-apk-fast.sh  setup-lxc-android.sh
